// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs snapshots renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #1a1a1a;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
>
  <a
    className="c1 Link"
    href="/applications"
    onClick={[Function]}
  >
    <span
      className="c2"
      color="neutral40"
      size="large"
    >
      Applications
    </span>
  </a>
</div>
`;

exports[`Breadcrumbs snapshots renders child route 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #1a1a1a;
}

.c5 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #1a1a1a;
}

.c4 svg {
  fill: #1a1a1a;
  height: 32px;
  width: 32px;
}

.c4 svg path.path-fill,
.c4 svg line.path-fill,
.c4 svg polygon.path-fill,
.c4 svg rect.path-fill,
.c4 svg circle.path-fill,
.c4 svg polyline.path-fill {
  fill: #1a1a1a !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4 svg path.stroke-fill,
.c4 svg line.stroke-fill,
.c4 svg polygon.stroke-fill,
.c4 svg rect.stroke-fill,
.c4 svg circle.stroke-fill,
.c4 svg polyline.stroke-fill {
  stroke: #1a1a1a !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4 svg rect.rect-height {
  height: 32px;
  width: 32px;
}

.c4.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c4.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c4 .c2 {
  margin-left: 4px;
  color: #1a1a1a;
}

.c4 img {
  width: 32px;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  max-width: 300px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
  className="c0"
>
  <a
    className="c1 Link"
    href="/applications"
    onClick={[Function]}
  >
    <span
      className="c2 c3"
      color="neutral40"
      size="large"
    >
      Applications
    </span>
  </a>
  <div
    className="c0 c4"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span
    aria-describedby={null}
    className="c2 c5 c6 ellipsis"
    color="neutral40"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    size="large"
    title="flux"
  >
    flux
  </span>
</div>
`;

exports[`Breadcrumbs snapshots renders on the root page 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #1a1a1a;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
>
  <span
    className="c1 c2 Link"
    color="neutral40"
    size="large"
  />
</div>
`;
